SSCSCI-1983: minor cleanup