@@ -1,5 +1,6 @@
 package uk.gov.hmcts.reform.sscs.ccd.service;
 
+import static java.util.Collections.emptyList;
 import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -126,7 +127,7 @@ public class SearchCcdCaseServiceTest {
 
         assertNotNull(casesByCaseRef);
         assertEquals(2, casesByCaseRef.size());
-        assertEquals(CASE_REF, casesByCaseRef.get(0).getData().getCaseReference());
+        assertEquals(CASE_REF, casesByCaseRef.getFirst().getData().getCaseReference());
     }
 
     @Test
@@ -143,8 +144,8 @@ public class SearchCcdCaseServiceTest {
 
         assertNotNull(casesByCaseRef);
         assertEquals(1, casesByCaseRef.size());
-        assertEquals(CASE_REF, casesByCaseRef.get(0).getData().getCaseReference());
-        assertEquals(caseId, casesByCaseRef.get(0).getData().getCcdCaseId());
+        assertEquals(CASE_REF, casesByCaseRef.getFirst().getData().getCaseReference());
+        assertEquals(caseId, casesByCaseRef.getFirst().getData().getCcdCaseId());
     }
 
     @Test
@@ -186,7 +187,7 @@ public class SearchCcdCaseServiceTest {
 
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(sscsCaseDetails, result.get(0));
+        assertEquals(sscsCaseDetails, result.getFirst());
     }
 
     @Test
@@ -256,7 +257,7 @@ public class SearchCcdCaseServiceTest {
 
         assertNotNull(casesByCaseId);
         assertEquals(1, casesByCaseId.size());
-        assertEquals(1L, casesByCaseId.get(0).getId().longValue());
+        assertEquals(1L, casesByCaseId.getFirst().getId().longValue());
 
     }
 
@@ -267,7 +268,8 @@ public class SearchCcdCaseServiceTest {
 
         SearchSourceBuilder query = findCaseBySingleField("data.caseReference", CASE_REF);
 
-        when(ccdClient.searchCases(idamTokens, query.toString())).thenReturn(SearchResult.builder().cases(Collections.EMPTY_LIST).build());
+        when(ccdClient.searchCases(idamTokens, query.toString()))
+                .thenReturn(SearchResult.builder().cases(emptyList()).build());
 
         when(readCcdCaseService.getByCaseId(1L, idamTokens)).thenReturn(null);
 
